# agent-evaluation-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md
src/agent_evaluation_lab/: __init__.py  api.py  config.py  demo_data.py  main.py  models.py  repository.py  web.py
src/agent_evaluation_lab/web_assets/: app.js  index.html  styles.css
tests/: test_api.py  test_repository.py  test_web.py
